- log for ssh-command was empty (fixed). 
- fixe parameter error on line 290+297 default.py (fixed).
- Job-windows dialog contains one entry to much (fixed).
- removed the stage-nummber from the stages-descriptions. 
- to add echo -n for the description of stages was a bad thing(fixed)
---------------------------------------------------------------------------------------------------
Date : 07.14.2010 | Release : 0.6C-A9   | Author  : H.Weber | CVS:137
---------------------------------------------------------------------------------------------------

Changes:

- Added correct progress indicator for dvd-iso.sh.
- I hate to make documenations updates wiki 
- All strings from the shell-scripts that are displayed inside 
  the gui are now inside the settings.

Bugfixes:

- typo devive -> device (fixed).
- error inside OSRemoveLock by startup (fixed).
- GUIInfo had a few refrences with the old parameter-count 1
---------------------------------------------------------------------------------------------------
Date : 07.14.2010 | Release : 0.6C-A10   | Author  : H.Weber | CVS:138-153
---------------------------------------------------------------------------------------------------

Changes:

- Changed logic behind the job-window because the lock-file deletion.
- Added ssh-command test inside expert-mode.
- Addes transcode bluray confirmend inside exper-mode.
- Added tracklist for bluray
- Added selection for destination-directory
- Added edit export-name
- Send back modified bluray paramters to OS-Part
- Added a parameter to OSBlurayExecuteList

Bugfixes:

- After a sucessful process the directory progress will be erased.
  This change was made inside all shell-scripts.
- Fixed type-error inside OSRemoveLock (fixed)
- By a few runs with bluray-chapter.sh I had sometimes not the 
  correct tracklist from bluray. (fixed)
 
---------------------------------------------------------------------------------------------------

















