@@ -78,6 +78,18 @@ Bugfixes:
   correct tracklist from bluray. (fixed)
  
 ---------------------------------------------------------------------------------------------------
+Date : 07.17.2010 | Release : 0.6C-A10   | Author  : H.Weber | CVS:154-
+---------------------------------------------------------------------------------------------------
+
+Changes:
+
+
+Bugfixes:
+
+- Secound error inside OSRemoveLock. (fixed)
+- Timeout Value for Bluray fixed.
+
+---------------------------------------------------------------------------------------------------
 
 
 
